<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add_label"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/AddLabel" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_addPicture"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/AddPicture" />
        <item
            android:id="@+id/nav_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/AboutFragment" />
        <item
            android:id="@+id/nav_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@android:drawable/ic_menu_revert"
            android:title="@string/LogoutFragment" />
    </group>
</menu>