<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_add_label">

    <fragment
        android:id="@+id/nav_add_label"
        android:name="com.example.mobilprogramlamafinal.ui.AddLabelFragment"
        android:label="@string/AddLabel"
        tools:layout="@layout/fragment_addlabel" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.mobilprogramlamafinal.ui.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_addPicture"
        android:name="com.example.mobilprogramlamafinal.ui.AddPictureFragment"
        android:label="@string/AddPicture"
        tools:layout="@layout/fragment_addpicture" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.mobilprogramlamafinal.ui.AboutFragment"
        android:label="@string/AboutFragment"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.mobilprogramlamafinal.ui.LogoutFragment"
        android:label="@string/LogoutFragment"
        tools:layout="@layout/fragment_logout" />
</navigation>